# Ai-Assistant

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env_exemple  pyproject.toml
.chainlit/: config.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_embedding_384.py
backend/: .dockerignore  Dockerfile
backend/app/: db.sqlite3
backend/app/authentication/: models.py
backend/app/chat/: urls.py  views.py
backend/app/core/: settings.py  urls.py
backend/auth/: models.py  views.py
backend/authentication/: serializers.py  urls.py
backend/chat/: models.py  rag_service.py  serializers.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/scripts/: entrypoint.sh
data/knowledge_base/: 01_admissions.md  02_curriculum.md  03_piscine.md  04_evaluations.md  05_campus_life.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EVALUATION.md  OBSERVABILITY.md
docs/assets/: architecture.mmd
evals/: README.md  golden_set.jsonl  schema.json  validate_dataset.py
frontend/app/: package-lock.json  package.json
frontend/app/app/: globals.css  layout.tsx  page.tsx  provider.tsx
frontend/app/components/: ChatArea.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  SplashScreen.tsx
frontend/app/services/: authService.ts
frontend/app/styles/: globals.css
infra/grafana/dashboards/: eval_trends.json  llm_costs.json  rag_operations.json
infra/loki/: loki-config.yml
infra/prometheus/: prometheus.yml
infra/prometheus/rules/: alerts.yml  recording.yml
infrastructure/: env_exemple
infrastructure/nginx/: Dockerfile
infrastructure/nginx/conf/: nginx.conf
public/: stylesheet.css  theme.json
rag/: Dockerfile  chat.py  config.py  database.py  document_processing.py  llm.py  main.py  rag.py  requirements.txt  vector_store.py
rag_chat_app/: rag.py  requirements.txt
scripts/: seed_demo.py  smoke.py
src/: __init__.py
src/application/: __init__.py
src/application/agent/: __init__.py  graph.py
src/application/agents/: __init__.py
src/application/dto/: __init__.py
src/application/prompts/: __init__.py  answer_with_citations.j2
src/application/use_cases/: __init__.py  evaluate.py  generate_answer.py  ingest_documents.py  retrieve.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  answer.py  chunk.py  citation.py  document.py  evaluation.py  query.py  session.py
src/domain/ports/: __init__.py  chunker.py  doc_loader.py  dto.py  (+8 more)
src/infrastructure/: __init__.py  di.py
src/interface/: __init__.py
src/shared/: __init__.py  errors.py  logging.py  metrics.py  tracing.py
tests/: conftest.py
tests/fixtures/: eval_smoke.jsonl
tests/infrastructure/: test_di.py
tests/shared/: test_logging.py  test_tracing.py
tests/unit/: test_settings.py
(+81 files in other folders)
