[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant"
version = "0.1.0"
description = "Hexagonal agentic RAG system for 1337 Coding School"
requires-python = ">=3.12,<3.14"
authors = [{name = "1337 Team"}]
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "langchain-google-genai>=2.0",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langfuse>=2.0",
    "torch>=2.5,<2.7",
    "torchvision>=0.20,<0.22",
    "transformers>=4.45,<5.0",
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.2",
    "pgvector>=0.3",
    "docling>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "streamlit>=1.39",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "prometheus-client>=0.20",
    "python-ulid>=2.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "ragas>=0.2,<0.3",
    "flagembedding>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "jinja2>=3.1",
    "langdetect>=1.0.9",
]

[project.scripts]
rag-cli = "src.interface.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.7",
]

[tool.uv]
# Force CPU-only PyTorch — no CUDA packages on this deployment target
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF", "ANN", "D"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
    "e2e: marks end-to-end tests",
    "unit: marks unit tests",
]
